# proyecto-ml

./: Dockerfile  README.md  README_old.md  docker-compose.yml  dvc.yaml  pyproject.toml  pytest.ini  requirements.txt
airflow/: airflow.cfg  airflow.db
airflow/dags/: data_engineering_dag.py  data_science_dag.py  master_pipeline_dag.py  reporting_dag.py
conf/base/: catalog.yml  logging.yml  parameters.yml
data/02_intermediate/: customers_clean.csv
notebooks/: 01_business_understanding.ipynb  02_data_understanding.ipynb  03_data_preparation.ipynb  04_modeling_regression.ipynb
src/proyecto_ml/: __init__.py  __main__.py  pipeline_registry.py  settings.py
src/proyecto_ml/pipelines/classification/: __init__.py  nodes.py  pipeline.py
src/proyecto_ml/pipelines/data_engineering/: nodes.py
src/proyecto_ml/pipelines/data_preparation/: nodes.py  pipeline.py
src/proyecto_ml/pipelines/data_science/: nodes.py  pipeline.py
src/proyecto_ml/pipelines/data_understanding/: nodes.py
src/proyecto_ml/pipelines/regression/: __init__.py  nodes.py  pipeline.py
src/proyecto_ml/pipelines/reporting/: nodes.py  pipeline.py  visualization_nodes.py
src/proyecto_ml/tests/: test_data_science_nodes.py
