[build-system]
requires = [ "setuptools",]
build-backend = "setuptools.build_meta"

[project]
requires-python = ">=3.9"
name = "proyecto_ml"
readme = "README.md"
dynamic = [ "version",]
dependencies = [ 
    "ipython>=8.10", 
    "jupyterlab>=3.0", 
    "notebook", 
    "kedro~=0.19.11",
    "pandas>=2.0",
    "numpy>=1.24",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "statsmodels>=0.14",
    "scipy>=1.11",
]

[project.scripts]
proyecto-ml = "proyecto_ml.__main__:main"

[tool.kedro]
package_name = "proyecto_ml"
project_name = "proyecto_ml"
kedro_init_version = "1.0.0"
tools = "['None']"
example_pipeline = "False"
source_dir = "src"

[project.entry-points."kedro.hooks"]

[tool.setuptools.dynamic.version]
attr = "proyecto_ml.__version__"

[tool.setuptools.packages.find]
where = [ "src",]
namespaces = false

[tool.kedro_telemetry]
project_id = "78be317fcd8242c18ea759eef467bf98"
